# cosign

./: .env.devnet.example  .gitignore  .gitleaks.toml  .package.resolved  .swiftformat  .swiftlint.yml  CONTRIBUTING.md  LICENSE  NOTICE  Project.swift  README.md  SECURITY.md  TestFixtures.md  Tuist.swift  Workspace.swift  lefthook.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  secret-scan.yml  ui-tests.yml
App/Resources/: Cosign.entitlements  Info.plist
App/Sources/: ContentView.swift  CosignApp.swift
Modules/Core/Sources/: Network.swift  Signer.swift
Modules/Core/Tests/: CoreTests.swift  NetworkTests.swift
Modules/CosignCore/Sources/: CosignCoreBridge.swift
Modules/CosignCore/Tests/: CosignCoreTests.swift
Modules/Indexer/Sources/: AnchorIDLDocument.swift  AssetMovement.swift  CosignBuildEnvironment.swift  CosignDemoFixture.swift  DASAsset.swift  (+38 more)
Tools/: GenerateBuildClaimKey.swift  SignBuildClaim.swift  SignDecodeRegistry.swift  SignJsonFile.swift  VerifyBuildClaim.swift
Tuist/ProjectDescriptionHelpers/: TargetFactory.swift
UITests/Sources/: BuildVerificationWalkthroughUITests.swift  CosignDemoDesignWalkthroughUITests.swift  SettingsWalkthroughUITests.swift
ci/: create_build_claim.py  create_submission_receipt.py  export-options.plist
core/: .dockerignore  Cargo.toml  Dockerfile  build.rs  deny.toml  fly.mainnet.toml  fly.toml  uniffi.toml
core/examples/: check_localnet_fixture.rs  devnet_fixture.rs  localnet_fixture.rs
core/examples/localnet_fixture/: browser_rpc_proxy.rs  manifest.rs
core/registry/: decode-registry.json  decode-registry.sig
core/registry/specs/: kamino-deposit.json  orca-swap.json  raydium-swap.json  stakepool-depositsol.json
core/src/: cosign_core.udl  derivation.rs  keypair.rs  lib.rs  membership_index.rs  membership_indexer.rs  mnemonic.rs  rpc.rs  squads.rs  transactions.rs  types.rs
core/static/: index.html  privacy.html
core/tests/: config_change_localnet.rs  create_multisig_localnet.rs  devnet_smoke.rs  local_validator.rs  membership_index_localnet.rs
core/tests/support/: localnet.rs
docs/: build-verification.md
scripts/: assemble-decode-registry.py  build-rust.sh  build-xcframework.sh  capture-demo-screenshots.rb  capture-demo.sh  check-localnet-fixtures.rb  check-ui-copy.rb  deploy-sim.sh  deploy-testflight.sh  devnet-fixtures.sh  lint.sh  open-devnet-rpc-url.rb  open-relay-url.rb  open-rpc-url.rb  release-tag.sh  set-testflight-notes.sh  start-localnet-fixtures.rb  stop-localnet-fixtures.rb
(+280 files in other folders)
