[package]
name = "cosign_core"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
publish = false

[lints.clippy]
all = { level = "warn", priority = -1 }
# `unsafe_code` and `unreachable_pub` deliberately omitted: UniFFI's generated
# scaffolding emits #[no_mangle] extern "C" items that trigger them. Policy
# enforcement on hand-written unsafe is left to code review for now.

[lib]
name = "cosign_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Compiles the marketing landing page + privacy page into the relay binary and
# serves them at / and /privacy. Off by default so forks serve no marketing site.
landing = []

[dependencies]
# 'cli' feature is required for the uniffi-bindgen binary in src/bin/.
uniffi = { version = "0.31.1", features = ["build", "cli"] }
thiserror = "1"
dotenvy = "0.15"
serde_json = "1"
url = "2"
# Used only by the host relay-server binary (Jupiter price fetch). The iOS
# staticlib is built with `--lib`, so this never cross-compiles to iOS.
ureq = { version = "2", features = ["json"] }
# Host-only as well (relay WebSocket proxy to the upstream Solana WS). Uses
# system TLS (native-tls) to avoid pulling a newer rustls/zeroize that conflicts
# with solana 1.18's curve25519-dalek 3.
tungstenite = { version = "0.24", features = ["native-tls"] }

# Solana ecosystem. Pinned to 1.18 because squads-multisig 2.1 transitively
# pins solana-{program,sdk,client} at 1.18.26. Cross-compiles cleanly to all
# iOS targets.
solana-sdk = "1.18"
solana-client = "1.18"
solana-rpc-client = "1.18"
solana-account-decoder = "1.18"
squads-multisig = "2.1"
spl-associated-token-account = "2.3"
spl-token = "4.0"
spl-token-2022 = "1.0"

# BIP39 mnemonic + SLIP-0010 + base58 + secret zeroizing.
# ed25519-dalek 2 was dropped because it requires curve25519-dalek 4 (newer
# zeroize), which conflicts with the curve25519-dalek 3 pulled in by
# solana-sdk. Signing now goes through solana_sdk::signer::keypair::Keypair,
# which uses the same curve25519-dalek 3 internally.
bip39 = { version = "2", default-features = false, features = ["rand"] }
hmac = "0.12"
sha2 = "0.10"
zeroize = "1"
rand = "0.10"
bs58 = "0.5"
bincode = "1.3"
base64 = "0.21"

[dev-dependencies]
hex = "0.4"
rcgen = "0.10"
rustls = "0.21"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
uniffi = { version = "0.31.1", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
